--- a/ViewController/public_html/Edit.jspx
+++ b/ViewController/public_html/Edit.jspx
@@ -187,6 +187,7 @@
                 <f:validator binding="#{bindings.SystemId.validator}"/>
                 <af:convertNumber groupingUsed="false"
                                   pattern="#{bindings.SystemId.format}"/>
+                <af:autoSuggestBehavior suggestedItems="#{bindings.SystemId.suggestedItems}"/>
               </af:inputListOfValues>
               <af:panelLabelAndMessage label="Poc Id"
                                        id="plam6">
@@ -325,6 +326,7 @@
                                     shortDesc="#{bindings.RationNo.hints.tooltip}"
                                     showRequired="true">
                 <f:validator binding="#{bindings.RationNo.validator}"/>
+                <af:autoSuggestBehavior suggestedItems="#{bindings.RationNo.suggestedItems}"/>
               </af:inputListOfValues>
               <af:inputText value="#{bindings.RangrefNo.inputValue}"
                             label="Range Ref No"
